<resources>
    <string name="app_name">tuto-android-java-2023</string>
    <string name="ok">OK</string>
    <string name="welcome_what_s_your_name">Welcome! What\'s your name?</string>
    <string name="lol">lol</string>
    <string name="lel">lel</string>
    <string name="pr_nom">FirstName:</string>
    <string name="nom">Lastname:</string>
    <string name="age">Age:</string>
    <string name="valider">Submit</string>
    <string name="retour">Back</string>
    <string name="aller">Go</string>
    <string name="your_email">Your email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="your_password">Your password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="login">Login</string>
    <string name="flag">flag</string>
    <string name="forget_your_password">forget your password ?</string>
    <string name="search">Search</string>
    <string name="ajouter_pays">Ajouter pays</string>
    <string name="nouveau_pays">Nouveau pays</string>
    <string name="url_image">url image</string>
    <string name="nom_du_pays">nom du pays</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_2">fragment 2</string>
    <string name="fragment_1">fragment 1</string>
    <string name="trash">trash</string>
    <string name="ajouter">ajouter</string>
    <string name="next">next</string>
    <string name="text">text</string>
    <string name="textview">TextView</string>
    <string name="choisisez_un_fragment_afficher">Choisisez un fragment à afficher</string>
    <string name="fragment_vert">Fragment Vert</string>
    <string name="fragment_rose">Fragment Rose</string>
    <string name="titre_static_du_fragment">Titre static du fragment</string>
    <string name="afficher_toast_de_l_activity">Afficher toast de l\'activity</string>
    <string name="afficher_toast">afficher_toast</string>

</resources>